# rpi_seism

./: README.md  pyproject.toml
src/: main.py
src/driver/: ad1256.py  ads1256.py  enums.py  main.py  spi.py
src/jobs/: __init__.py  msed_writer.py  reader.py  trigger_processor.py  websocket_sender.py
src/settings/: __init__.py  channel.py  enums.py  mcu_settings.py  spi.py
src/structs/: mcu_settings.py  sample.py
src/utils/: sta_lta.py
